Update readme and requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -49,6 +49,11 @@ filterpy
 # multiSyncPy # for python version
 matlabengine # for matlab version
 
+# graph networks
+xlsxwriter
+igraph
+openpyxl
+pyinform
 
 
 
