Minor changes for running model 2

--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,5 @@ pose_detection/include/
 
 # BR only code specific to Tom's work
 synchrony_analysis/cross_correlations/run_model1_json.py
+synchrony_analysis/mdrqa/run_model2_json.py
 synchrony_analysis/frame_check_only_json.py
